Fixing navbar overflow and adding footer

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -32,10 +32,7 @@ nav {
     width: 100%;
     overflow: hidden;
     background-color: #1f2937;
-  }
-  
-  .nav-img {
-    max-width: 100px; /* Set your desired max width for the logo */
+    z-index: 90;
   }
   
   .nav-list {
@@ -43,19 +40,22 @@ nav {
     display: flex;
     margin: 0;
     padding: 0;
+    margin-right: 20px;
   }
   
   .nav-item {
     margin-right: 20px; /* Add spacing between menu items */
     text-decoration: none;
-    color: #f9faf8; /* Set your text color */
+    color: #f9faf8;
     font-weight: bold;
+    font-size: 18px;
   }
   .nav-brand{
     color:#f9faf8;
     text-decoration: none;
-    size: 24px;
+    font-size: 24px;
     padding-right: auto;
+    font-weight: bold;
 }
   
   /* Media query for responsive design */
@@ -263,15 +263,6 @@ nav {
     font-size: 1.3em;
     font-weight: bold;
   }
-  .carrousel li img {
-    width: 3em;
-    height: 3em;
-    object-fit: cover;
-    border-radius: 50%;
-    margin-left: -1.5em;
-    margin-right: 0.5em;
-    vertical-align: middle;
-  }
   .carrousel li span.author {
     margin-top:0.5em;
     font-size: 1.2em;
@@ -366,6 +357,98 @@ nav {
     background-color: #1f2937;
     color: #e5e7eb;
   }
+
+  /*footer Styles*/
+
+.footer-content p {
+    color: white;
+    margin-top: 25px;
+}
+
+.footer-content h4 {
+    color: white;
+    font-size: 16px;
+    margin-top: 20px;
+}
+
+.footer-content {
+    display: inline-block;
+}
+
+.footer-subscribe {
+    padding-left: 80px;
+}
+
+.footer-solutions h3, .footer-support h3, .footer-subscribe h3 {
+    font-size: 17px;
+    font-weight: 600;
+    display: block;
+    margin-bottom: 35px;
+    color: #fff;
+}
+
+.footer-solutions li, .footer-support li {
+    display: block;
+    margin-bottom: 15px;
+}
+
+.single-footer-content {
+    padding: 0px;
+}
+
+.single-footer-content a {
+    text-decoration: none;
+    color: white;
+    transition: all .3s ease;
+}
+
+.single-footer-content a:hover {
+    color: #7e57ff;
+}
+
+.footer-subscribe p {
+    color: white;
+    margin-bottom: 40px;
+}
+
+.input-group input {
+    background-color: #ffffff1f;
+    border: none;
+    border-radius: 10px;
+    padding: 10px 20px;
+}
+
+.input-group input:focus {
+    background-color: #ffffff1f;
+    border: none;
+    box-shadow: 0 0 0 0;
+    caret-color: white;
+}
+
+.input-group input::placeholder {
+    color: #737373;
+}
+
+.copyright-area{
+    display: flex;
+    justify-content: center;
+}
+
+.copyright-text {
+    color: #fff;
+    font-size: 15px;
+    transition: all .3s ease-out;
+}
+
+.footer {
+    background-color: #081828;
+    padding-top: 25px;
+}
+
+.footer-container{
+    display: flex;
+    justify-content: space-evenly;
+}
   
   /* Add more styles as needed */
   /* ... (Previous CSS Rules) ... */
